# alacrite

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Alacrite.sln  Cargo.toml  Dockerfile  README.md  TODO.md  config.toml  docker-compose.yml  go.mod  server.go
.github/workflows/: ci.yml
Alacrite.Api/: Alacrite.Api.http
Alacrite.Api/Properties/: launchSettings.json
api/: Dockerfile  config.toml  go.mod  go.sum  main.go
api/config/: config.go  types.go
api/controllers/: location_controller.go
api/database/: main.go
api/database/models/: locations.go  user.go
api/routers/: health.go  locations.go  main.go
api/routers/tests/: health_test.go
api/routes/: main.go  ping.go  users.go
site/: README.md  bun.lockb  package.json
site/app/: layout.tsx  page.tsx
site/components/: Header.tsx  Layout.tsx
site/pages/api/post/: [id].ts  index.ts
site/pages/api/publish/: [id].ts
site/pages/p/: [id].tsx
src/: cli.rs  config.rs  logging.rs  main.rs  service.rs
src/config/: core.rs  downloads.rs  mod.rs  notifications.rs  persistance.rs  sharing.rs
src/network_discovery/: discover.rs  mdns.rs  mod.rs  udp_broadcast.rs
src/ssh/: key_manager.rs
src/websockets/: event_loop.rs  handle_message.rs  messages.rs  mod.rs
src/websockets/handlers/: client.rs  mod.rs  server.rs
