[package]
name = "alacrite-api"
description = "API portion of Alacrite"
authors = ["Xithrius <xithrius@gmail.com>"]
homepage = "https://github.com/Xithrius/alacrite-api"
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"

[dependencies]
local-ip-address = "0.6.3"
mdns-sd = "0.13.5"
tokio = { version = "1.44.1", features = ["full"] }

[[bin]]
name = "alacrite-api"
path = "src/main.rs"

[profile.dev]
lto = "off"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
