[package]
name = "alacrite"
description = "P2P LAN-bound file sharing"
authors = ["Xithrius <xithrius@gmail.com>"]
homepage = "https://github.com/Xithrius/alacrite"
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.1", features = ["full"] }
anyhow = "1.0.100"
config = "0.15.18"
local-ip-address = "0.6.3"
mdns-sd = "0.13.5"

[[bin]]
name = "alacrite"
path = "src/main.rs"

[profile.dev]
lto = "off"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
