[package]
name = "alacrite"
description = "P2P LAN-bound file sharing"
authors = ["Xithrius <xithrius@gmail.com>"]
homepage = "https://github.com/Xithrius/alacrite"
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.1", features = ["full"] }
color-eyre = "0.6.3"
config = "0.15.18"
local-ip-address = "0.6.3"
mdns-sd = "0.13.5"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
parking_lot = "0.12.5"
clap = { version = "4.5.41", features = [
    "derive",
    "env",
    "color",
    "suggestions",
    "wrap_help",
] }
futures = "0.3.31"
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
serde_json = "1.0.145"
uuid = { version = "1.8.0", features = ["v4"] }
gethostname = "0.4"

[[bin]]
name = "alacrite"
path = "src/main.rs"

[profile.dev]
lto = "off"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
